# smart_home_msgs

./: CMakeLists.txt  package.xml
msg/: Color.msg  ColorPeaksTelem.msg  CountdownState.msg  DeviceActivationChange.msg  Float32Arr.msg  ModeChange.msg  ModeChangeRequest.msg  WaveParticipantLocation.msg  WaveUpdate.msg
srv/: RequestScreenCalibration.srv  SetScreenCalibrationPointsOfHomography.srv
